fixed show animation on dark mode

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -8,7 +8,7 @@
   }
   body {
       min-height: 100%;
-      background-color: #ffffff;
+      background-color: #101010;
   }
   h1 {
       letter-spacing: -1px;
@@ -62,6 +62,7 @@
       margin: 0 -2%;
       transform: rotate(-12deg) skew(-12deg);
   }
+
   .box-divider--light-all-2 {
       box-shadow: inset 0 0 0 2px #e3e8ee;
   }
@@ -242,7 +243,7 @@
 
 .dark-light-toggle{
   z-index: 99;
-  position: absolute;
+  position: fixed;
   left: 25px;
   top: 30px;
 }
@@ -258,7 +259,7 @@
 }
 
 .dark-theam{
-  background-color: #101010;
+  background-color: #1a1f36;
   color: #ffff;
   transition: all 0.4s ease-in-out;
 }
